# Production-RAG

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  commit_doc.txt  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  logging_config.py  main.py
app/clients/: __init__.py  cache.py  db.py  embeddings.py  llm.py  reranker.py  vectorstore.py
app/models/: __init__.py  schemas.py
app/modules/: __init__.py  pipeline.py
app/modules/autoeval/: __init__.py  capture.py  generator.py  schemas.py  service.py
app/modules/cache/: __init__.py  service.py
app/modules/eval/: __init__.py  golden.py  metrics.py  report.py  runner.py  schemas.py
app/modules/generation/: __init__.py  generator.py  prompt.py  schemas.py
app/modules/ingestion/: __init__.py  chunker.py  indexer.py  loader.py  service.py
app/modules/ingestion/loaders/: __init__.py  base.py  docx.py  html.py  markdown.py  pdf.py  text.py
app/modules/quality/: __init__.py  confidence.py  extractor.py  service.py  verifier.py
app/modules/retrieval/: __init__.py  confidence.py  dense.py  fusion.py  hybrid.py  retriever.py  sparse.py
app/routers/: __init__.py  ask.py  cache.py  feedback.py  health.py  ingest.py
app/utils/: __init__.py  tokens.py
config/: system.yaml
eval/: golden_set.jsonl
sample_docs/: first-steps.md  path-parameters.md  query-parameters.md
scripts/: cache_loadtest.py  fetch_corpus.py  run_eval.py
tests/: test_autoeval.py  test_cache.py  test_eval.py  test_hybrid_retrieval.py  test_ingest_ask.py  test_loaders.py  test_quality.py  test_smoke.py
tests/fixtures/multiformat/: sample.docx  sample.html  sample.txt
