[project]
name = "production-rag"
version = "0.1.0"
description = "Production RAG over FastAPI docs+issues: hybrid search, semantic cache, auto-eval."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "instructor>=1.15.4",
    "openai>=2.45.0",
    "pydantic-settings>=2.14.2",
    "python-json-logger>=4.1.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: tests that download/load models or hit external services",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
