[project]
name = "production-rag"
version = "0.1.0"
description = "Production RAG over FastAPI docs+issues: hybrid search, semantic cache, auto-eval."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "instructor>=1.15.4",
    "lxml>=6.1.1",
    "markdown-it-py>=4.2.0",
    "numpy>=2.5.1",
    "ollama>=0.6.2",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pygithub>=2.9.1",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-frontmatter>=1.3.0",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "redis>=8.0.1",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: tests that download/load models or hit external services",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are meant to be called in arg defaults.
extend-immutable-calls = ["fastapi.File", "fastapi.Form", "fastapi.Query", "fastapi.Depends", "fastapi.Body"]
